src/components/carrousel/Carrousel.css
.my-carrousel {
  display: flex; justify-content: center; align-items: center;
  position: relative; margin: 0px 100px; padding: 0;
}
.my-carrousel img {
  width: 100%; max-height: 22.4rem;
  object-fit: cover; border-radius: 0.62rem;
}
.arrow {
  position: absolute; top: 50%; background: none; color: white;
  transform: translateY(-50%); font-size: 2.5rem; border: none;
  cursor: pointer; z-index: 2; padding: 0 0.94rem;
}
.arrow.left {
  left: 0.62rem;
}
.arrow.right {
  right: 0.62rem;
}
.carousel-image {
  width: 100%; max-height: 31.25rem;
  object-fit: cover; border-radius: 0.5rem;
}
.nav-button {
  position: absolute; top: 50%; font-size: 2rem;
  background: rgba(0,0,0,0.3); color: white;
  border: none; padding: 0.5rem; cursor: pointer;
  transform: translateY(-50%); z-index: 1;
}
.carrousel-counter {
  display: flex; justify-content: center; align-items: center;
  position: absolute; bottom: 1rem;
  padding: 0.3rem 0.6rem; border-radius: 0.3rem;
  background-color: transparent; color: white;
  font-size: 1rem; font-weight: bold;
}


@media (max-width: 1272px) {
  .my-carrousel { margin: 0px 70px; } 
}
@media (max-width: 1028px) {
  .my-carrousel img {
    width: 100%; max-height: 250px;
    object-fit: cover; border-radius: 0.62rem;
  }
  .my-carrousel { margin: 0px 100px; }
  .arrow img { width: 80px; }
}
@media (max-width: 848px) {
  .my-carrousel { margin: 0px 60px; }
  .arrow img { width: 70px; }
}
 @media (max-width: 576px) {
  .my-carrousel { margin: 0px 20px; }
  .my-carrousel img { width: 100%; min-height: 335px; } 
  .arrow img { width: 75px; height: 1px; 
    object-fit: fill; font-size: 5px;} 
}
@media (max-width: 424px) {
  .my-carrousel { margin: 0px 20px;}
  .arrow img { width: 50px; }
}

